[tool.rye.scripts]
fmt = "rye fmt"
lint = "rye lint --fix"
check = "basedpyright"
test = "rye test"
all = { chain = ["fmt", "lint", "check", "test"] }

[project]
name = "una-example-modules"
version = "0.1.0"
description = "una example monorepo for Modules style"
authors = [
    { name = "Chris Arderne", email = "chris@rdrn.me" }
]
dependencies = ["cowsay-python==1.0.2"]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "una>=0.1.3",
    "pytest>=8.3.2",
    "basedpyright>=1.16.0",
]

[tool.rye.workspace]
member = ["projects/*"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
dev-mode-dirs = ["libs", "apps"]

[tool.una]
style = "modules"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["A", "E", "F", "I", "N", "T100"]

[tool.ruff.lint.isort]
known-first-party = ["una_example_packages"]

[tool.basedpyright]
venvPath = "."
venv = ".venv"
strict = ["**/*.py"]
extraPaths = ["apps", "libs"]

[tool.pytest.ini_options]
addopts = ""
